UX: overflow fix for add participants to PM on mobile

--- a/app/assets/stylesheets/mobile/modal-overrides.scss
+++ b/app/assets/stylesheets/mobile/modal-overrides.scss
@@ -18,3 +18,9 @@
     justify-content: center;
   }
 }
+
+.d-modal.add-pm-participants {
+  .d-modal__body {
+    overflow: visible;
+  }
+}
